doctorEditor. Fix speciality combo sets to null

--- a/Diagnosis.Client.App/Windows/Editors/DoctorEditor.xaml
+++ b/Diagnosis.Client.App/Windows/Editors/DoctorEditor.xaml
@@ -38,7 +38,7 @@
         </DockPanel>
         <DockPanel>
             <Label Content="Специальность" />
-            <ComboBox SelectedItem="{Binding Speciality, ValidatesOnDataErrors=True, TargetNullValue=—}"
+            <ComboBox SelectedItem="{Binding Speciality, ValidatesOnDataErrors=True}"
                       ItemsSource="{Binding DataContext.Specialities,ElementName=editor}" />
         </DockPanel>
     </StackPanel>
