xaml. Minor DesignInstances

--- a/Diagnosis.Client.App/Windows/Editors/AdminSettings.xaml
+++ b/Diagnosis.Client.App/Windows/Editors/AdminSettings.xaml
@@ -3,9 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:design="clr-namespace:Diagnosis.Client.App.DesignData"
              xmlns:forms="clr-namespace:Diagnosis.Client.App.Controls.FormParts"
              mc:Ignorable="d"
              Width="300"
+             d:DataContext="{d:DesignInstance design:SampleAdminSettingsViewModel, IsDesignTimeCreatable=True}"
              d:DesignHeight="100"
              d:DesignWidth="300">
     <forms:ConfirmPasswordControl DataContext="{Binding Passwords}"
