--- a/Diagnosis.Client.App/Screens/Sync.xaml
+++ b/Diagnosis.Client.App/Screens/Sync.xaml
@@ -65,7 +65,7 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <diag:OpenRemote Grid.ColumnSpan="2" DataContext="{Binding OpenRemoteViewModel}"/>              
+                <diag:OpenRemote Grid.ColumnSpan="2" DataContext="{Binding Remote}"/>              
                
 
                 <StackPanel Orientation="Horizontal"
