--- a/Diagnosis.Common.Presentation/Controls/OpenRemote.xaml
+++ b/Diagnosis.Common.Presentation/Controls/OpenRemote.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl x:Class="Diagnosis.Common.Presentation.Controls.OpenRemote"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
              d:DesignWidth="500">
     <Grid>
         <Grid.RowDefinitions>
@@ -20,9 +20,9 @@
         <Label Content="Источник" />
         <TextBox x:Name="connectionString"
                  Style="{StaticResource conStrTextBox}"
-                 Text="{Binding RemoteConnectionString,
-                                    UpdateSourceTrigger=PropertyChanged,
-                                    ValidatesOnDataErrors=True}"
+                 Text="{Binding ConnectionString,
+                                UpdateSourceTrigger=PropertyChanged,
+                                ValidatesOnDataErrors=True}"
                  Grid.Column="1" />
 
         <StackPanel Orientation="Horizontal"
@@ -42,7 +42,7 @@
                    ToolTip="Провайдер источника"
                    Grid.ColumnSpan="3"
                    Grid.Row="1"
-                   Text="{Binding RemoteProviderName}"
+                   Text="{Binding ProviderName}"
                    Grid.Column="1" />
     </Grid>
 </UserControl>
