--- a/Diagnosis.Server.App/Screens/Sync.xaml
+++ b/Diagnosis.Server.App/Screens/Sync.xaml
@@ -65,11 +65,11 @@
                 <Label Content="Источник" />
                 <TextBox x:Name="remoteConnectionString"
                          Style="{StaticResource conStrTextBox}"
-                         Text="{Binding RemoteConnectionString,
+                         Text="{Binding Remote.ConnectionString,
                                     UpdateSourceTrigger=PropertyChanged,
                                     ValidatesOnDataErrors=True}"
                          Grid.Column="1" />
-                <Button Command="{Binding OpenSdfCommand}"
+                <Button Command="{Binding Remote.OpenSdfCommand}"
                         Grid.Column="2"
                         Margin="10 0 0 0"
                         Content="Выбрать файл..." />
