--- a/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
@@ -56,6 +56,9 @@
             <DataTemplate DataType="{x:Type diag:SyncViewModel}">
                 <screen:Sync />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type diag:VocabularyListViewModel}">
+                <screen:Vocabs />
+            </DataTemplate>
             <DataTemplate DataType="{x:Type diag:UndoOverlayViewModel}">
                 <diag:UndoOverlay />
             </DataTemplate>
