--- a/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
+++ b/Diagnosis.Common.Presentation/Styles/AfterThemeStyles.xaml
@@ -207,6 +207,13 @@
                 Value="0,0,5,0" />
     </Style>
 
+    <Style x:Key="DataGridCheckbox"
+           TargetType="{x:Type CheckBox}"
+           BasedOn="{StaticResource {x:Type CheckBox}}">
+        <Setter Property="Focusable"
+                Value="False" />
+    </Style>
+
     <Style x:Key="MyDataGridStyle"
            TargetType="{x:Type DataGrid}"
            BasedOn="{StaticResource {x:Type DataGrid}}">
@@ -215,6 +222,8 @@
         <Setter Property="IsReadOnly"
                 Value="True" />
         <Setter Property="CanUserReorderColumns"
+                Value="False" />
+        <Setter Property="CanUserResizeRows"
                 Value="False" />
         <Setter Property="SelectionUnit"
                 Value="FullRow" />
@@ -232,6 +241,16 @@
 
         <Setter Property="VirtualizingStackPanel.VirtualizationMode"
                 Value="Standard" />
+        <Setter Property="RowHeaderTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <Grid>
+                        <CheckBox IsChecked="{Binding Path=IsSelected, Mode=TwoWay,
+                                  RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGridRow}}}" />
+                    </Grid>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
     <!--  forms  -->
 
