--- a/Diagnosis.Client.App/Controls/Search/SearchResult.xaml
+++ b/Diagnosis.Client.App/Controls/Search/SearchResult.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.Client.App.Controls.Search.HrSearchResult2"
+﻿<UserControl x:Class="Diagnosis.Client.App.Controls.Search.SearchResult"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
