--- a/Diagnosis.Client.App/Screens/Search.xaml
+++ b/Diagnosis.Client.App/Screens/Search.xaml
@@ -211,7 +211,7 @@
             </TreeView.ItemContainerStyle>
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                    <search:HrSearchResult2 />
+                    <search:SearchResult />
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
