--- a/Diagnosis.Client.App/Windows/Editors/MeasureEditor.xaml
+++ b/Diagnosis.Client.App/Windows/Editors/MeasureEditor.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              xmlns:design="clr-namespace:Diagnosis.Client.App.DesignData"
+             xmlns:mahControls="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:search="clr-namespace:Diagnosis.Client.App.Controls.Search"
              Width="450"
              d:DataContext="{d:DesignInstance design:SampleMeasureEditorViewModel,
@@ -52,6 +53,7 @@
                      Text="{Binding Value,
                                         Mode=TwoWay,
                                         ValidatesOnDataErrors=True}"
+                     mahControls:TextBoxHelper.SelectAllOnFocus="True"
                      HorizontalContentAlignment="Right"
                      VerticalContentAlignment="Top" />
             <ComboBox x:Name="uom"
