--- a/Diagnosis.Client.App/Windows/Editors/CourseEditor.xaml
+++ b/Diagnosis.Client.App/Windows/Editors/CourseEditor.xaml
@@ -1,12 +1,15 @@
 ﻿<UserControl x:Class="Diagnosis.Client.App.Windows.Editors.CourseEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:design="clr-namespace:Diagnosis.Client.App.DesignData"
              mc:Ignorable="d"
              Width="250"
-             Height="100"
-             d:DesignHeight="300" d:DesignWidth="300">
+             Height="130"
+             d:DataContext="{d:DesignInstance design:SampleCourseEditorViewModel, IsDesignTimeCreatable=True}"
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <StackPanel>
         <StackPanel.Resources>
             <Style TargetType="DockPanel"
@@ -41,6 +44,15 @@
                                 </Style>
                             </Run.Style>
                         </Run>
+                    </Hyperlink>
+            </TextBlock>
+        </DockPanel>
+        <DockPanel Visibility="{Binding CanCorrectAppsDates, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Label />
+            <TextBlock TextElement.FontSize="{DynamicResource HelpFontSize}"
+                       ToolTip="Меняет даты осмотров так, чтобы все осмотры были в интервале начало-конец.">
+                    <Hyperlink Command="{Binding CorrectAppsDatesCommand}">
+                        <Run>Исправить даты осмотров курса</Run>
                     </Hyperlink>
             </TextBlock>
         </DockPanel>
